# nornir-pyavd

./: LICENSE  Pipfile  README.md  generate.py  nornir_config.yml  pyproject.toml  readme.md  requirements.txt
configs/: dc1-leaf1a.cfg  dc1-leaf1b.cfg  dc1-leaf1c.cfg  dc1-leaf2a.cfg  dc1-leaf2b.cfg  dc1-leaf2c.cfg  dc1-spine1.cfg  dc1-spine2.cfg
docs/: dc1-leaf1a.md  dc1-leaf1b.md  dc1-leaf1c.md  dc1-leaf2a.md  dc1-leaf2b.md  dc1-leaf2c.md  dc1-spine1.md  dc1-spine2.md
group_vars/: FABRIC.yml
host_vars/: dc1-spine1.yml
